<resources>
    <string name="app_name">My Application1</string>
    <string name="happy_birthday_to_anthony">happy_birthday_to_anthony</string>
    <string name="happy_birthday_to_anthonyy">happy_birthday_to_anthonyy</string>
    <string name="button">button</string>
    <string name="happy_birthday_to_anthonyyy">happy birthday to anthonyy</string>
    <string name="hope_you_had_a_great_birthday">hope you had a great birthday</string>
    <string name="more_blessing_coming_your_way">More blessing coming your way</string>
    <string name="todo">TODO</string>
    <string name="botton2">Button</string>
    <string name="button1">Button</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
</resources>